feat: 更新线程检查 添加调试
Signed-off-by: 502647092 <admin@yumc.pw>

--- a/pom.xml
+++ b/pom.xml
@@ -1,98 +1,100 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>pw.yumc</groupId>
-	<artifactId>Yum</artifactId>
-	<version>2.7.8</version>
-	<name>Yum</name>
-	<description>Minecraft 服务器插件管理系统</description>
-	<build>
-		<finalName>${project.name}</finalName>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>2.3</version>
-				<configuration>
-					<createDependencyReducedPom>false</createDependencyReducedPom>
-					<minimizeJar>true</minimizeJar>
-					<artifactSet>
-						<includes>
-							<include>pw.yumc:YumCore</include>
-						</includes>
-					</artifactSet>
-					<relocations>
-						<relocation>
-							<pattern>pw.yumc.YumCore</pattern>
-							<shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
-						</relocation>
-					</relocations>
-				</configuration>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
-	<ciManagement>
-		<system>Jenkins</system>
-		<url>http://ci.yumc.pw/job/${project.artifactId}/</url>
-	</ciManagement>
-	<properties>
-		<update.description>§a全新 2.X 版本 更多守护与优化</update.description>
-		<update.changes>
-			§c注意  §6- §aYum更新需要§d重启服务器!§c重启服务器!§4重启服务器!;
-			§b2.7.7 §6- §c修复部分插件重载时提示Plugin already initialized的问题!;
-			        §6- §c修复§eBukkitDev§c下载地址跳转问题...;
-			        §6- §c修复§eBukkitDev§c下载为空时的异常...;
-		</update.changes>
-		<env.GIT_COMMIT>DEV</env.GIT_COMMIT>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-	<repositories>
-		<repository>
-			<id>yumc-repo</id>
-			<url>http://repo.yumc.pw/content/groups/public/</url>
-		</repository>
-	</repositories>
-	<distributionManagement>
-		<repository>
-			<id>jtb</id>
-			<name>YUMC</name>
-			<url>http://repo.yumc.pw/content/repositories/yumcenter/</url>
-		</repository>
-	</distributionManagement>
-	<dependencies>
-		<dependency>
-			<groupId>pw.yumc</groupId>
-			<artifactId>YumCore</artifactId>
-			<type>jar</type>
-			<version>1.5</version>
-		</dependency>
-		<dependency>
-			<groupId>pw.yumc</groupId>
-			<artifactId>BukkitInjectedTools</artifactId>
-			<type>jar</type>
-			<version>1.0</version>
-		</dependency>
-	</dependencies>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>pw.yumc</groupId>
+    <artifactId>Yum</artifactId>
+    <version>2.7.8</version>
+    <name>Yum</name>
+    <description>Minecraft 服务器插件管理系统</description>
+    <build>
+        <finalName>${project.name}</finalName>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>2.3</version>
+                <configuration>
+                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                    <minimizeJar>true</minimizeJar>
+                    <artifactSet>
+                        <includes>
+                            <include>pw.yumc:YumCore</include>
+                        </includes>
+                    </artifactSet>
+                    <relocations>
+                        <relocation>
+                            <pattern>pw.yumc.YumCore</pattern>
+                            <shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <ciManagement>
+        <system>Jenkins</system>
+        <url>http://ci.yumc.pw/job/${project.artifactId}/</url>
+    </ciManagement>
+    <properties>
+        <update.description>§a全新 2.X 版本 更多守护与优化</update.description>
+        <update.changes>
+            §c注意 §6- §aYum更新需要§d重启服务器!§c重启服务器!§4重启服务器!;
+            §b2.7.7 §6- §c修复部分插件重载时提示Plugin already initialized的问题!;
+            §6- §c修复§eBukkitDev§c下载地址跳转问题...;
+            §6- §c修复§eBukkitDev§c下载为空时的异常...;
+        </update.changes>
+        <env.GIT_COMMIT>DEV</env.GIT_COMMIT>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.7</maven.compiler.source>
+        <maven.compiler.target>1.7</maven.compiler.target>
+    </properties>
+    <repositories>
+        <repository>
+            <id>yumc-repo</id>
+            <url>http://repo.yumc.pw/content/groups/public/</url>
+        </repository>
+    </repositories>
+    <distributionManagement>
+        <repository>
+            <id>jtb</id>
+            <name>YUMC</name>
+            <url>http://repo.yumc.pw/content/repositories/yumcenter/</url>
+        </repository>
+    </distributionManagement>
+    <dependencies>
+        <dependency>
+            <groupId>pw.yumc</groupId>
+            <artifactId>YumCore</artifactId>
+            <type>jar</type>
+            <version>1.5</version>
+        </dependency>
+        <dependency>
+            <groupId>pw.yumc</groupId>
+            <artifactId>BukkitInjectedTools</artifactId>
+            <type>jar</type>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
 </project>
