--- a/src/main/resources/thread.yml
+++ b/src/main/resources/thread.yml
@@ -3,9 +3,11 @@
 ############################
 
 #配置版本号 请勿修改!!!
-Version: 1.0
+Version: 1.1
 
 #是否开启线程安全检测
 ThreadSafe: true
 #是否开启主线程IO检测
 MainThreadCheck: true
+#是否开启调试模式
+Debug: false
