--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pw.yumc</groupId>
     <artifactId>Yum</artifactId>
-    <version>2.7.9</version>
+    <version>2.7.10</version>
     <description>Minecraft 服务器插件管理系统</description>
     <build>
         <finalName>${project.artifactId}</finalName>
@@ -49,10 +49,13 @@
         <url>http://ci.yumc.pw/job/${project.artifactId}/</url>
     </ciManagement>
     <properties>
-        <update.description>§a补丁包 2.7.9 版本</update.description>
+        <update.description>§a补丁包 2.7.10 版本</update.description>
         <update.changes>
+            §617-07-29 §cfix: 修复不兼容 1.12 的问题;
             §6- §cfix: §7修复仓库数据读取错误的问题;
-            §6- §cfix: §7修复一个tab补全产生的错误;
+            §6- §cfix: §7修复一个tab补全产生的错误
+        </update.changes>
+        <update.changelog>
             §6- §btip: §a本插件最后一次更新 2.7.8 版本;
             §6- §afeat: §7线程中断只显示一次调试信息;
             §6- §afeat: §7更新线程检查 添加调试;
@@ -66,8 +69,8 @@
             §6- §cfix: §7修复lasterror命令显示问题;
             §6- §afeat: §7使用SimpleJson解析仓库数据;
             §6- §afeat: §7使用新的类库处理Tellraw;
-            §6- §cfix: §7当仓库未找到插件时没有提示的BUG
-        </update.changes>
+            §6- §cfix: §7当仓库未找到插件时没有提示的BUG;
+        </update.changelog>
         <env.GIT_COMMIT>DEV</env.GIT_COMMIT>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
@@ -91,7 +94,7 @@
             <groupId>pw.yumc</groupId>
             <artifactId>YumCore</artifactId>
             <type>jar</type>
-            <version>1.6</version>
+            <version>[1.8.1,)</version>
         </dependency>
         <dependency>
             <groupId>pw.yumc</groupId>
