--- a/pom.xml
+++ b/pom.xml
@@ -1,53 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>pw.yumc</groupId>
+
     <artifactId>Yum</artifactId>
     <version>2.7.10</version>
+    <packaging>jar</packaging>
+
     <description>Minecraft 服务器插件管理系统</description>
-    <build>
-        <finalName>${project.artifactId}</finalName>
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <filtering>true</filtering>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>2.4.3</version>
-                <configuration>
-                    <createDependencyReducedPom>false</createDependencyReducedPom>
-                    <minimizeJar>true</minimizeJar>
-                    <artifactSet>
-                        <includes>
-                            <include>pw.yumc:YumCore</include>
-                        </includes>
-                    </artifactSet>
-                    <relocations>
-                        <relocation>
-                            <pattern>pw.yumc.YumCore</pattern>
-                            <shadedPattern>${project.groupId}.${project.artifactId}</shadedPattern>
-                        </relocation>
-                    </relocations>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-    <ciManagement>
-        <system>Jenkins</system>
-        <url>http://ci.yumc.pw/job/${project.artifactId}/</url>
-    </ciManagement>
+
+    <parent>
+        <groupId>pw.yumc</groupId>
+        <artifactId>minecraft-plugin-parent</artifactId>
+        <version>1.0</version>
+        <relativePath/>
+    </parent>
+
     <properties>
         <update.description>§a补丁包 2.7.10 版本</update.description>
         <update.changes>
@@ -76,26 +43,8 @@
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-    <repositories>
-        <repository>
-            <id>yumc-repo</id>
-            <url>http://repo.yumc.pw/content/groups/public/</url>
-        </repository>
-    </repositories>
-    <distributionManagement>
-        <repository>
-            <id>jtb</id>
-            <name>YUMC</name>
-            <url>http://repo.yumc.pw/content/repositories/yumcenter/</url>
-        </repository>
-    </distributionManagement>
+
     <dependencies>
-        <dependency>
-            <groupId>pw.yumc</groupId>
-            <artifactId>YumCore</artifactId>
-            <type>jar</type>
-            <version>[1.8.1,)</version>
-        </dependency>
         <dependency>
             <groupId>pw.yumc</groupId>
             <artifactId>BukkitInjectedTools</artifactId>
@@ -103,4 +52,12 @@
             <version>[1.1,)</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
