--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>Yum</artifactId>
-    <version>2.7.10</version>
+    <version>2.8.0</version>
     <packaging>jar</packaging>
 
     <description>Minecraft 服务器插件管理系统</description>
@@ -16,13 +16,14 @@
     </parent>
 
     <properties>
-        <update.description>§a补丁包 2.7.10 版本</update.description>
+        <update.description>§a补丁包 2.8 版本</update.description>
         <update.changes>
+            §619-02-23 §cfix: 修复不兼容 1.13 的问题;
+        </update.changes>
+        <update.changelog>
             §617-07-29 §cfix: 修复不兼容 1.12 的问题;
             §6- §cfix: §7修复仓库数据读取错误的问题;
             §6- §cfix: §7修复一个tab补全产生的错误
-        </update.changes>
-        <update.changelog>
             §6- §btip: §a本插件最后一次更新 2.7.8 版本;
             §6- §afeat: §7线程中断只显示一次调试信息;
             §6- §afeat: §7更新线程检查 添加调试;
@@ -40,8 +41,8 @@
         </update.changelog>
         <env.GIT_COMMIT>DEV</env.GIT_COMMIT>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
