--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>Yum</artifactId>
-    <version>2.8.0</version>
+    <version>2.8.1</version>
     <packaging>jar</packaging>
 
     <description>Minecraft 服务器插件管理系统</description>
@@ -16,8 +16,9 @@
     </parent>
 
     <properties>
-        <update.description>§a补丁包 2.8 版本</update.description>
+        <update.description>§a补丁包 2.8.1 版本</update.description>
         <update.changes>
+            §619-08-26 §cfix: 修复不兼容 1.14.4 的问题;
             §619-02-23 §cfix: 修复不兼容 1.13 的问题;
         </update.changes>
         <update.changelog>
